Main Window DataGrid Patients: delete "Батьки" #40, add "Адреса проживання" #42, add Стать #41

--- a/docnote/App.xaml
+++ b/docnote/App.xaml
@@ -33,7 +33,7 @@
                     <resources:LengthConverter x:Key="LengthConverter" />
 
                     <resources:BoolInverterConverter x:Key="BoolInverterConverter" />
-
+                    <resources:BoolToSexConverter x:Key="BoolToSexConverter" />
                     <resources:BoolConverter x:Key="BoolConverter" />
                     <resources:ComboBoxConverter x:Key="ComboBoxConverter" />
                     <resources:ComboBoxRomeConverter x:Key="ComboBoxRomeConverter" />
