В списку пацієнтів вивести колонку "Соціальний статус" #44

--- a/docnote/MainWindow.xaml
+++ b/docnote/MainWindow.xaml
@@ -119,6 +119,14 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding SocialStatus}" Header="Соціальний статус" Width="Auto">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="Padding" Value="7 0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Sex, Converter={StaticResource BoolToSexConverter}}" Header="Стать" Width="Auto">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="TextBlock">
