--- a/docnote/View/PatientWindow.xaml
+++ b/docnote/View/PatientWindow.xaml
@@ -115,6 +115,7 @@
         <Label Grid.Row="1" >Ім'я</Label>
         <Label Grid.Row="1" Grid.Column="2">По-батькові</Label>
         <Label Grid.Row="3" >Дата народження</Label>
+        <Label Grid.Row="3" Grid.Column="2">Соціальний статус</Label>
         <Label Content="Телефон" Grid.Row="4" />
         <Label Content="Інформація про батків" Grid.Row="5"/>
         <TextBox Style="{StaticResource Validate}" 
@@ -142,6 +143,14 @@
             </i:Interaction.Behaviors>
         </TextBox>
         <DatePicker Grid.Column="1" Grid.Row="3" Text="{Binding Patient.BirthDate, Converter={StaticResource DateConverter}, Mode=TwoWay}" SelectedDateFormat="Long" Controls:TextBoxHelper.Watermark="Виберіть дату"/>
+        <TextBox Grid.Column="3" Grid.Row="3"
+                 Style="{StaticResource Validate}" 
+                 MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.SocialStatus'}"
+                 Text="{Binding Path=Patient.SocialStatus, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
         <TextBox Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" 
                  Style="{StaticResource Validate}" 
                  MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.PhoneNumber'}"
