--- a/docnote/App.xaml
+++ b/docnote/App.xaml
@@ -33,6 +33,7 @@
                     <resources:LengthConverter x:Key="LengthConverter" />
 
                     <resources:BoolInverterConverter x:Key="BoolInverterConverter" />
+                    <resources:BoolToUnboundReasonConverter x:Key="BoolToUnboundReasonConverter" />
                     <resources:BoolToSexConverter x:Key="BoolToSexConverter" />
                     <resources:BoolConverter x:Key="BoolConverter" />
                     <resources:ComboBoxConverter x:Key="ComboBoxConverter" />
